Fixed a little spacing

--- a/style.css
+++ b/style.css
@@ -18,9 +18,10 @@ div{
 #gopParty{
     float:right;
     clear: all;
+
 }
 /*
-#contestTable{
+#contestTable{weee
     display:table;         
     width:800px;         
     background-color:#eee;         
